[tool.poetry]
name = "social-networks-analysis"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks"]
readme = "README.md"
packages = [{include = "social_networks_analysis"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.3"
networkx = "^3.1"
scipy = "^1.10.1"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
